refactor: 통계 영역 정렬추가